kube_konfig/all.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bestrong
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bestrong-deployment
  namespace: bestrong
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bestrong
  template:
    metadata:
      labels:
        app: bestrong
    spec:
      containers:
      - name: bestrong
        image: bestrongdockeracr6ep0b2yp.azurecr.io/vitaliistelmakhaspnetcorewebapisample:145
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: acr-auth

---
apiVersion: v1
kind: Service
metadata:
  name: bestrong-service
  namespace: bestrong
spec:
  type: LoadBalancer
  selector:
    app: bestrong
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bestrong-ingress
  namespace: bestrong
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - "peetro.eastus.cloudapp.azure.com"
    secretName: bestrong-tls
  rules:
  - host: "peetro.eastus.cloudapp.azure.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bestrong-service
            port:
              number: 80
