kube_konfig/bsapi.yml
apiVersion: v1
kind: Namespace
metadata:
  name: bestrong
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bestrong-deployment
  namespace: bestrong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bestrong
  template:
    metadata:
      labels:
        app: bestrong
    spec:
      containers:
      - name: bestrong
        image: bestrongdockeracr6ep0b2yp.azurecr.io/vitaliistelmakhaspnetcorewebapisample:145
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: acr-auth
---

apiVersion: v1
kind: Service
metadata:
  name: bestrong-service
  namespace: bestrong
spec:
  type: NodePort
  selector:
    app: bestrong
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
  name: local-ingress
  namespace: bestrong 
spec:
  rules:
  - host: test-app.com
    http:
      paths:
      - backend:
          service:
            name: bestrong-service
            port:
              number: 80 
        path: "/"
        pathType: "Prefix"
  tls:
  - hosts:
    - test-app.com
    secretName: test-app-cert-tls
